--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <body>
 
-<p><a href="https://github.com/Joinmewin/test/raw/master/bgimage.png"><img alt="" src="https://github.com/Joinmewin/test/raw/master/bgimage.png" /></a></p>
+<p><a href="https://github.com/Joinmewin/Joinmewin.github.io/raw/master/bgimage.png"><img alt="" src="https://github.com/Joinmewin/Joinmewin.github.io/raw/master/bgimage.png" /></a></p>
 
-<p><span style="font-size:22px"><strong>有問題, 請點選 FreePP 客服聯絡:&nbsp;</strong></span> &nbsp;<img alt="" src="https://github.com/Joinmewin/test/raw/master/freepp.png" /></p>
+<p><span style="font-size:22px"><strong>有問題, 請點選 FreePP 客服聯絡:&nbsp;</strong></span> &nbsp;<img alt="" src="https://github.com/Joinmewin/Joinmewin.github.io/raw/master/freepp.png" /></p>
 
 </body>
 </html>
