--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <p><img alt="" src="bgimage.png" /></p>
 
-<p><span style="font-size:22px"><strong>有問題, 請點選 FreePP 客服聯絡:&nbsp;</strong></span> &nbsp;<img alt="" src="freepp.png" /></p>
+<p><span style="font-size:22px"><strong>有問題, 請點選 FreePP 客服聯絡:&nbsp;</strong></span> &nbsp;<a href="freePP://www.freepp.com/shop_sale?arg0=0&arg1=1"><img alt="" src="freepp.png" /></a></p>
 
 </body>
 </html>
