--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<meta name="viewport" content="width=500, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
 <body>
 
 <p><img alt="" src="bgimage.png" /></p>
