--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
 <body>
 
-<p><img alt="" src="bgimage.png" /></p>
+<p><img alt="" src="bgimage.jpg" /></p>
 
 <p><span style="font-size:22px"><strong>有問題, 請點選 FreePP 客服聯絡:&nbsp;</strong></span> &nbsp;<a href="freePP://www.freepp.com/shop_sale?arg0=0&arg1=1"><img alt="" src="freepp.png" /></a></p>
 
