--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <p><img alt="" src="bgimage1.jpg" /></p>
 
-<p><span style="font-size:22px"><strong>有問題, 請點選 FreePP 客服聯絡:&nbsp;</strong></span> &nbsp;<a href="freePP://www.freepp.com/shop_sale?pid=ffaa2067-8135-4fd9-970a-3380afd49e1c&action=10&image=https://github.com/Joinmewin/Joinmewin.github.io/raw/master/bgimage1.jpg&title=On Sale Product&text=$70 USD. 20% off!&uri=https://joinmewin.github.io/
+<p><span style="font-size:22px"><strong>有問題, 請點選 FreePP 客服聯絡:&nbsp;</strong></span> &nbsp;<a href="freePP://www.freepp.com/
 "><img alt="" src="freepp.png" /></a><a href="https://www.google.com/"><img alt="" src="freepp.png" /></a></p>
 
 </body>
